# prism-artifact

./: .env-example  .gitignore  NOTICE  README.md  pyproject.toml
apps/cc/: default.py
apps/prism/: prism_claude_sonnet_4_5.py
apps/prismwofsg/: prismwofsg_o4_mini.py
apps/prismwopcr/: prismwopcr_o4_mini.py
evaluation-results/: Prism Evaluation.xlsx
evaluation-results/claude-code/1/: cc.default.json
evaluation-results/claude-code/2/: cc.default.json
evaluation-results/claude-code/3/: cc.default.json
evaluation-results/claude-code/4/: cc.default.json
evaluation-results/claude-code/5/: cc.default.json
evaluation-results/patchagent/1/: SUMMARY.txt
evaluation-results/patchagent/2/: SUMMARY.txt
evaluation-results/patchagent/3/: SUMMARY.txt
evaluation-results/patchagent/4/: SUMMARY.txt
evaluation-results/patchagent/5/: SUMMARY.txt
evaluation-results/prism-no-fix-strategy/1/: prism.prism_o4_mini.json
evaluation-results/prism-no-fix-strategy/2/: prism.prism_o4_mini.json
evaluation-results/prism-no-fix-strategy/3/: prism.prism_o4_mini.json
evaluation-results/prism-no-fix-strategy/4/: prism.prism_o4_mini.json
evaluation-results/prism-no-fix-strategy/5/: prism.prism_o4_mini.json
evaluation-results/prism-no-keyword-based-retrieval/1/: prism.prism_o4_mini.json
evaluation-results/prism-no-keyword-based-retrieval/2/: prism.prism_o4_mini.json
evaluation-results/prism-no-keyword-based-retrieval/3/: prism.prism_o4_mini.json
evaluation-results/prism-no-keyword-based-retrieval/4/: prism.prism_o4_mini.json
evaluation-results/prism-no-keyword-based-retrieval/5/: prism.prism_o4_mini.json
evaluation-results/prism-sonnet/1/: prism.prism_claude_sonnet_4_5.json
evaluation-results/prism-sonnet/2/: prism.prism_claude_sonnet_4_5.json
evaluation-results/prism-sonnet/3/: prism.prism_claude_sonnet_4_5.json
evaluation-results/prism-sonnet/4/: prism.prism_claude_sonnet_4_5.json
evaluation-results/prism-sonnet/5/: prism.prism_claude_sonnet_4_5.json
evaluation-results/prism/1/: prism.round1.json
evaluation-results/prism/2/: prism.round2.json
evaluation-results/prism/3/: prism.round3.json
evaluation-results/prism/4/: prism.round4.json
evaluation-results/prism/5/: prism.prism_o4_mini.json
scripts/: setup.py
scripts/benchmark/: __main__.py
scripts/benchmark/afc/: apache-commons-compress_cc-delta-01_vuln_3.toml  apache-commons-compress_cc-delta-02_vuln_9.toml  apache-commons-compress_cc-delta-03_vuln_4.toml  apache-commons-compress_cc-delta-04_vuln_6.toml  apache-commons-compress_cc-delta-05_vuln_10.toml  apache-commons-compress_cc-delta-06_vuln_7.toml  apache-poi_poi-delta-01_vuln_5.toml  (+85 more)
scripts/crs_test/: make_tarballs.py
scripts/eval/: Dockerfile  afc_benchmark.py  build.sh  change_result.py  environment_builder.py  functions.py  models.py  run_test_reports.sh  run_tests.py  task_manager.py
wrappers/crs-architecture/: setup.py
(+16112 files in other folders)
